5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2497.log
== TEST (2019-05-08 10:15:30) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t =t+1
	soma=soma+saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:15:50) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t =t+1
	soma=soma+saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:36:44) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (tes>1):
	rend = saldo * juros
	saldo = saldo + rend
	t =t+1
	soma=soma+saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (tes>1):
NameError: name 'tes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:48:26) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t=t+1
	soma=soma+saldo
print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma=soma+saldo
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:49:38) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (tempo>1):
	rend = saldo * juros
	saldo = saldo + rend
	t=t+1
print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma=soma+saldo
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:53:08) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (t!=tempo):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2))
	t=t+1


	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:53:49) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi     
t = 0
while (t!=tempo):
	rend = saldo * juros
	saldo = saldo + rend
	print(round(saldo, 2))
	t=t+1


	

-- EXECUTION TIME:
0.165559
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
